Adds publication format

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -140,19 +140,20 @@
 }
 
 @article{saunders_pragmatic_2018,
-  title    = {Pragmatic tuberculosis prevention policies for primary care in low- and middle-income countries},
-  volume   = {51},
-  issn     = {1399-3003},
-  doi      = {10.1183/13993003.00315-2018},
-  language = {eng},
-  number   = {3},
-  journal  = {The European Respiratory Journal},
-  author   = {Saunders, Matthew J. and Tovar, Marco A. and Datta, Sumona and Evans, Benjamin E. W. and Wingfield, Tom and Evans, Carlton A.},
-  month    = mar,
-  year     = {2018},
-  pmid     = {29567728},
-  keywords = {Humans, Income, Tuberculosis, Pulmonary, Latent Tuberculosis, Primary Health Care, Tuberculosis},
-  pages    = {1800315}
+  title       = {Pragmatic tuberculosis prevention policies for primary care in low- and middle-income countries},
+  volume      = {51},
+  issn        = {1399-3003},
+  doi         = {10.1183/13993003.00315-2018},
+  language    = {eng},
+  number      = {3},
+  journal     = {The European Respiratory Journal},
+  author      = {Saunders, Matthew J. and Tovar, Marco A. and Datta, Sumona and Evans, Benjamin E. W. and Wingfield, Tom and Evans, Carlton A.},
+  month       = mar,
+  year        = {2018},
+  pmid        = {29567728},
+  keywords    = {Humans, Income, Tuberculosis, Pulmonary, Latent Tuberculosis, Primary Health Care, Tuberculosis},
+  bibtex_show = {true},
+  pages       = {1800315}
 }
 
 @article{thompson_predicting_2025,
