--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,71 +3,39 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{barbur_color_2021,
-  bibtex_show = {true},
-  title       = {Color vision assessment-3. {An} efficient, two-step, color assessment protocol},
-  volume      = {46},
-  copyright   = {© 2020 Wiley Periodicals LLC},
-  issn        = {1520-6378},
-  html        = {https://onlinelibrary.wiley.com/doi/abs/10.1002/col.22599},
-  doi         = {10.1002/col.22599},
-  abstract    = {Color vision tests and multi-test protocols in current use often fail to detect small changes in red/green (RG) and yellow/blue (YB) color vision due to poor sensitivity. The tests also have low specificity. In this study, we examine how improved understanding of within- and inter-subject variability in RG and YB color vision and accurate assessment of the differences in color thresholds between the least-sensitive, age-matched normal trichromats, and the least-affected deutans and protans can be used to design an efficient color vision screener (CVS) test. To achieve this objective, we examined two extensive data sets from earlier studies and carried out new experiments to provide better estimates of within-subject variability in color thresholds and to validate the CVS test. The data sets provide essential information on inter-subject variability, the effects of normal aging on RG and YB thresholds, and the spread in RG color thresholds in deutan and protan subjects. A statistical model was developed to optimize the parameters of the CVS test and to predict the limits of what can be achieved in color assessment. The efficiency and repeatability of the CVS test were then assessed in 84 subjects. The results match model predictions and reveal close to 100\% test efficiency. The test takes between 140 and 160 seconds to complete and has close to 100\% repeatability. An efficient, “two-step” protocol based on the initial use of the CVS test followed by full color assessment in only those who fail the CVS test is also described.},
-  language    = {en},
-  number      = {1},
-  htmldate    = {2025-10-04},
-  journal     = {Color Research \& Application},
-  author      = {Barbur, John L. and Rodriguez-Carmona, Marisa and Evans, Benjamin E. W.},
-  year        = {2021},
-  note        = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/col.22599},
-  keywords    = {color assessment, acquired color deficiency, CAD test, color vision screener, red-green color deficiency, yellow-blue color deficiency},
-  pages       = {33--45}
-}
 
-@article{evans_color_2021,
+@article{thompson_predicting_oct_ergvep_2025,
   bibtex_show = {true},
-  title       = {Color vision assessment-1: {Visual} signals that affect the results of the {Farnsworth} {D}-15 test},
-  volume      = {46},
-  copyright   = {© 2020 Wiley Periodicals LLC},
-  issn        = {1520-6378},
-  shorttitle  = {Color vision assessment-1},
-  html        = {https://onlinelibrary.wiley.com/doi/abs/10.1002/col.22596},
-  doi         = {10.1002/col.22596},
-  abstract    = {The Farnsworth D-15 test (D-15) is commonly used to screen for moderate to severe congenital color vision deficiency. The aim of this study was to establish reliable D-15 statistics for normal, deutan and protan subjects, and to investigate the different visual signals one can use to carry out the test, even in dichromats and rod monochromats. Six hundred and seventy-four subjects were examined using the D-15, the Colour Assessment and Diagnosis test and the Nagel anomaloscope. A rod monochromat and five dichromats were tested using the standard D-15 protocol before the caps were separated into two groups and subjects were asked to repeat the task. D-15 spectral radiance data, measured under D65 illumination, were used to estimate differences in photoreceptor excitations for each of the caps. When no crossings and up to two adjacent transpositions on the D-15 results diagram are accepted as a pass, 100\% of normal trichromats, 54\% of deutans and 43\% of protans pass the D-15. A rod monochromat and two protanopes and deuteranopes were able to complete the D-15 when the caps were separated into two groups, despite severe loss or even complete absence of color vision. When up to two adjacent transpositions are accepted 50\% of color deficient subjects, some with severe red/green loss, pass the D-15. While the D-15 is normally used to screen for moderate to severe color deficiency, subjects with severe loss can still use combined, residual red/green, yellow/blue and luminance signals to pass.},
-  language    = {en},
-  number      = {1},
-  htmldate    = {2025-10-04},
-  journal     = {Color Research \& Application},
-  author      = {Evans, Benjamin E. W. and Rodriguez-Carmona, Marisa and Barbur, John L.},
-  year        = {2021},
-  note        = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/col.22596},
-  keywords    = {color assessment, color vision deficiency, dichromatism, Farnsworth D-15, rod monochromatism},
-  pages       = {7--20}
-}
-
-@article{evans_color_2025,
-  bibtex_show = {true},
-  title       = {Color screening outcomes on uncalibrated "home" displays-assessment of variability in {sRGB} color standard parameters on commercial visual displays},
-  volume      = {42},
-  issn        = {1520-8532},
-  doi         = {10.1364/JOSAA.544986},
-  abstract    = {The Color vision screener (CVS) test was evaluated for use on visual displays that support the red green blue (sRGB) color space standard. When used on commercial displays in sRGB color mode, the CVS had a sensitivity and specificity (95\% confidence intervals) of 0.55 (0.46-0.64) and 1.00 (0.98-1.00). With calibrated displays, all color-deficient observers failed the CVS, but many of these, some with severe loss, were able to pass the test on 10 separate sRGB displays. The CVS test can only achieve close to 100\% sensitivity and specificity on fully calibrated displays.},
+  title       = {Predicting {OCT} retinal ganglion cell volume from pattern {ERGs} and {VEPs} in children with suspected optic neuropathy in a tertiary referral setting},
+  volume      = {10},
+  issn        = {2397-3269},
+  doi         = {10.1136/bmjophth-2024-001899},
+  html        = {https://bmjophth.bmj.com/content/10/1/e001899},
+  abstract    = {PURPOSE: To determine the relationship between retinal ganglion cell (RGC) structure, measured by optical coherence tomography (OCT), and function measured by electrodiagnostic tests in children with suspected optic neuropathy.
+                 METHODS: Children presenting consecutively with suspected optic neuropathy were investigated by visual electrophysiology. ISCEV Standard monocular pattern reversal visual evoked potential (PVEP) P100 and pattern electroretinogram (PERG) P50 and N95, amplitudes and peak times were collected, along with the N95 slope 30 ms after the P50 peak. OCT retinal nerve fibre layer (RNFL) thickness from each peripapillary sector and the average macular RGC volume in a 3.45 mm diameter circle were collated. The sensitivity (SENS) and specificity (SPEC) of abnormal visual electrophysiology measures in predicting OCT structural measures were estimated by receiver operating characteristic (ROC) area under the ROC curve (AUC).
+                 RESULTS: Monocular PVEPs and PERGs from 30-degree stimulus fields and OCT RNFL and RGC volume were available from 42 children (84 eyes) aged 5.5-16.3 years (median 12.4 years). PVEP AUC was highest for predicting both RGC macular volume and temporal RNFL thinning (SENS 88\%, SPEC 88\%), followed by the PERG N95 slope (SENS 79\%, SPEC 78\%). PERG N95:P50 had the lowest SENS of 62\% and SPEC of 61\%, which were similar for all RNFL sectors.
+                 CONCLUSION: Abnormal PERG N95 slopes and PVEPs predicted severe loss of macular RGC volume and temporal sector RNFL with high diagnostic accuracy. These measures are important additions to the less specific PERG N95:P50, which was broadly sensitive to all RNFL sectors. The N95 slope and PVEPs are valuable objective functional markers of RGC health in children.},
   language    = {eng},
-  number      = {5},
-  journal     = {Journal of the Optical Society of America. A, Optics, Image Science, and Vision},
-  author      = {Evans, Benjamin E. W. and Rodriguez-Carmona, Marisa and Llapashtica, Emsal and Barbur, John L.},
-  month       = may,
+  number      = {1},
+  journal     = {BMJ open ophthalmology},
+  author      = {Thompson, Dorothy A. and Prise, Katrina L. and Tucker, Lisa and Roche, Dermot and Bowman, Richard and Evans, Benjamin E. W. and Handley, Sian and Marmoy, Oliver R.},
+  month       = mar,
   year        = {2025},
-  pmid        = {40793535},
-  pages       = {B289--B295}
+  pmid        = {40122570},
+  pmcid       = {PMC11931969},
+  keywords    = {Child, Child, Preschool, Humans, Adolescent, Female, Male, ROC Curve, Electrophysiology, Electroretinography, Evoked Potentials, Visual, Imaging, Nerve Fibers, Optic Nerve, Optic Nerve Diseases, Retinal Ganglion Cells, Tertiary Care Centers, Tomography, Optical Coherence},
+  pages       = {e001899}
 }
 
-@article{evans_increasing_2025,
+
+@article{evans_myopia_s4s2_2025,
   bibtex_show = {true},
   title       = {Increasing myopia in {Scotland} at age of 3.5-5.5 years: {A} retrospective epidemiological study},
   volume      = {45},
   issn        = {1475-1313},
   shorttitle  = {Increasing myopia in {Scotland} at age of 3.5-5.5 years},
   doi         = {10.1111/opo.13461},
+  html        = {https://onlinelibrary.wiley.com/doi/full/10.1111/opo.13461},
   abstract    = {PURPOSE: Scotland has comprehensive child vision screening at age 3.5-5.5 years of age, with {\textasciitilde}85\% participation (40,000-50,000 screening episodes annually). Orthoptists deliver the screening, including presenting vision, cover test and other tests. Screening failures are referred for eye examinations, including cycloplegic refraction. The study aims to report refractive error data from these examinations ({\textasciitilde}5000-6000 annually) for 3 years before and 2 years following the COVID-19 pandemic, and to investigate correlations between myopia and socio-economic factors.
                  METHODS: Right eye data from eight Scottish health boards (HB) are reported for spherical equivalent refraction (SER) for the years 2013-14, 2014-15, 2015-16, 2020-21 and 2021-22. Associations were investigated between the proportion of the sample in each HB with myopia and the proportion of the population in each HB with different levels of deprivation index, classification on a rural/urban continuum and dwelling type.
                  RESULTS: Refractive error frequency distributions revealed a myopic shift in SER over the 5 years. Median SER (interquartile range) in 2013-14, 2014-15, 2015-16, 2020-21 and 2021-22 was +1.38 D (+0.50 to +2.75), +1.38 D (+0.25 to +2.63), +1.38 D (+0.50 to +2.75), +1.13 D (+0.25 to +2.25) and +1.25 D (+0.38 to +2.25), respectively. The increase in myopia was statistically significant in each of the last 2 years compared with each of the first 3 years (p {\textless} 0.0005). The proportion of myopes (≤-0.50 D) increased from {\textless}7.8\% annually in 2013-16 to 11.51\% in 2020-21 and 10.65\% in 2021-22 (linear trend: r2 = 0.94, p = 0.006). Associations between the proportion of children in each HB with myopia and: (1) deprivation index was low and not statistically significant; (2) the proportion of the population in the most urban environments was high (r2 = 0.79; p = 0.003); (3) the proportion of dwellings that were flats/apartments was also high (r2 = 0.83, p = 0.002).
@@ -84,12 +52,33 @@
   pages       = {834--844}
 }
 
-@article{evans_multicenter_2025,
+@article{evans_cvs_home_2025,
+  bibtex_show = {true},
+  html        = {https://doi.org/10.1364/JOSAA.544986},
+  title       = {Color screening outcomes on uncalibrated "home" displays-assessment of variability in {sRGB} color standard parameters on commercial visual displays},
+  volume      = {42},
+  issn        = {1520-8532},
+  doi         = {10.1364/JOSAA.544986},
+  abstract    = {The Color vision screener (CVS) test was evaluated for use on visual displays that support the red green blue (sRGB) color space standard. When used on commercial displays in sRGB color mode, the CVS had a sensitivity and specificity (95\% confidence intervals) of 0.55 (0.46-0.64) and 1.00 (0.98-1.00). With calibrated displays, all color-deficient observers failed the CVS, but many of these, some with severe loss, were able to pass the test on 10 separate sRGB displays. The CVS test can only achieve close to 100\% sensitivity and specificity on fully calibrated displays.},
+  language    = {eng},
+  number      = {5},
+  journal     = {Journal of the Optical Society of America. A, Optics, Image Science, and Vision},
+  author      = {Evans, Benjamin E. W. and Rodriguez-Carmona, Marisa and Llapashtica, Emsal and Barbur, John L.},
+  month       = may,
+  year        = {2025},
+  pmid        = {40793535},
+  pages       = {B289--B295}
+}
+
+
+@article{evans_cvs_multicenter_2025,
+  abbr        = {Selected},
   bibtex_show = {true},
   title       = {Multicenter evaluation of the color vision screener test},
   volume      = {42},
   issn        = {1520-8532},
   doi         = {10.1364/JOSAA.544985},
+  html        = {https://doi.org/10.1364/JOSAA.544985},
   abstract    = {An international multicenter study was designed and carried out to evaluate the color vision screener (CVS) test for normal trichromats and congenital color deficients. Over 400 participants from nine international Colour Assessment and Diagnosis (CAD) testing centers completed the CVS and the CAD test on calibrated visual displays. The CVS had a sensitivity and specificity [95\% confidence intervals] of 1.00 [0.98-1.00] and 0.99 [0.97-1.00] with a positive and negative predictive index of 0.94 and 1.00 for an assumed prevalence of 8\%. The CVS is quick, efficient, and easy to use, and its sensitivity is equivalent to the optimal published Ishihara protocol.},
   language    = {eng},
   number      = {5},
@@ -99,6 +88,26 @@
   year        = {2025},
   pmid        = {40793525},
   pages       = {B190--B198}
+}
+
+@article{evans_d15_2021,
+  bibtex_show = {true},
+  title       = {Color vision assessment-1: {Visual} signals that affect the results of the {Farnsworth} {D}-15 test},
+  volume      = {46},
+  copyright   = {© 2020 Wiley Periodicals LLC},
+  issn        = {1520-6378},
+  shorttitle  = {Color vision assessment-1},
+  html        = {https://onlinelibrary.wiley.com/doi/abs/10.1002/col.22596},
+  doi         = {10.1002/col.22596},
+  abstract    = {The Farnsworth D-15 test (D-15) is commonly used to screen for moderate to severe congenital color vision deficiency. The aim of this study was to establish reliable D-15 statistics for normal, deutan and protan subjects, and to investigate the different visual signals one can use to carry out the test, even in dichromats and rod monochromats. Six hundred and seventy-four subjects were examined using the D-15, the Colour Assessment and Diagnosis test and the Nagel anomaloscope. A rod monochromat and five dichromats were tested using the standard D-15 protocol before the caps were separated into two groups and subjects were asked to repeat the task. D-15 spectral radiance data, measured under D65 illumination, were used to estimate differences in photoreceptor excitations for each of the caps. When no crossings and up to two adjacent transpositions on the D-15 results diagram are accepted as a pass, 100\% of normal trichromats, 54\% of deutans and 43\% of protans pass the D-15. A rod monochromat and two protanopes and deuteranopes were able to complete the D-15 when the caps were separated into two groups, despite severe loss or even complete absence of color vision. When up to two adjacent transpositions are accepted 50\% of color deficient subjects, some with severe red/green loss, pass the D-15. While the D-15 is normally used to screen for moderate to severe color deficiency, subjects with severe loss can still use combined, residual red/green, yellow/blue and luminance signals to pass.},
+  language    = {en},
+  number      = {1},
+  htmldate    = {2025-10-04},
+  journal     = {Color Research \& Application},
+  author      = {Evans, Benjamin E. W. and Rodriguez-Carmona, Marisa and Barbur, John L.},
+  year        = {2021},
+  keywords    = {color assessment, color vision deficiency, dichromatism, Farnsworth D-15, rod monochromatism},
+  pages       = {7--20}
 }
 
 @article{rodriguez-carmona_color_2021,
@@ -117,10 +126,29 @@
   journal     = {Color Research \& Application},
   author      = {Rodriguez-Carmona, Marisa and Evans, Benjamin E. W. and Barbur, John L.},
   year        = {2021},
-  note        = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/col.22598},
   keywords    = {acquired color deficiency, CAD test, City University (2nd ed.), color assessment protocols, color tests, congenital color deficiency, Farnsworth Munsell D-15, Ishihara, red-green color vision},
   pages       = {21--32}
 }
+
+@article{barbur_color_assessment_3_2021,
+  bibtex_show = {true},
+  title       = {Color vision assessment-3. {An} efficient, two-step, color assessment protocol},
+  volume      = {46},
+  copyright   = {© 2020 Wiley Periodicals LLC},
+  issn        = {1520-6378},
+  html        = {https://onlinelibrary.wiley.com/doi/abs/10.1002/col.22599},
+  doi         = {10.1002/col.22599},
+  abstract    = {Color vision tests and multi-test protocols in current use often fail to detect small changes in red/green (RG) and yellow/blue (YB) color vision due to poor sensitivity. The tests also have low specificity. In this study, we examine how improved understanding of within- and inter-subject variability in RG and YB color vision and accurate assessment of the differences in color thresholds between the least-sensitive, age-matched normal trichromats, and the least-affected deutans and protans can be used to design an efficient color vision screener (CVS) test. To achieve this objective, we examined two extensive data sets from earlier studies and carried out new experiments to provide better estimates of within-subject variability in color thresholds and to validate the CVS test. The data sets provide essential information on inter-subject variability, the effects of normal aging on RG and YB thresholds, and the spread in RG color thresholds in deutan and protan subjects. A statistical model was developed to optimize the parameters of the CVS test and to predict the limits of what can be achieved in color assessment. The efficiency and repeatability of the CVS test were then assessed in 84 subjects. The results match model predictions and reveal close to 100\% test efficiency. The test takes between 140 and 160 seconds to complete and has close to 100\% repeatability. An efficient, “two-step” protocol based on the initial use of the CVS test followed by full color assessment in only those who fail the CVS test is also described.},
+  language    = {en},
+  number      = {1},
+  htmldate    = {2025-10-04},
+  journal     = {Color Research \& Application},
+  author      = {Barbur, John L. and Rodriguez-Carmona, Marisa and Evans, Benjamin E. W.},
+  year        = {2021},
+  keywords    = {color assessment, acquired color deficiency, CAD test, color vision screener, red-green color deficiency, yellow-blue color deficiency},
+  pages       = {33--45}
+}
+
 
 @article{saunders_household-level_2020,
   bibtex_show = {true},
@@ -129,9 +157,10 @@
   issn        = {1474-4457},
   shorttitle  = {A household-level score to predict the risk of tuberculosis among contacts of patients with tuberculosis},
   doi         = {10.1016/S1473-3099(19)30423-2},
+  html        = {https://www.thelancet.com/article/S1473-3099(19)30423-2/fulltext},
   abstract    = {BACKGROUND: The epidemiological impact and cost-effectiveness of social protection and biomedical interventions for tuberculosis-affected households might be improved by risk stratification. We therefore derived and externally validated a household-level risk score to predict tuberculosis among contacts of patients with tuberculosis.
                  METHODS: In this prospective cohort study, we recruited tuberculosis-affected households from 15 desert shanty towns in Ventanilla and 17 urban communities in Callao, Lima, Peru. Tuberculosis-affected households included index patients with a new diagnosis of tuberculosis and their contacts who reported being in the same house as the index patient for more than 6 h per week in the 2 weeks preceding index patient diagnosis. Tuberculosis-affected households were not included if the index patient had no eligible contacts or lived alone. We followed contacts until 2018 and defined household tuberculosis, the primary outcome, as any contact having any form of tuberculosis within 3 years. We used logistic regression to identify characteristics of index patients, contacts, and households that were predictive of household tuberculosis, and used these to derive and externally validate a household-level score.
-                 FINDINGS: Between Dec 12, 2007, and Dec 31, 2015, 16 505 contacts from 3 301 households in Ventanilla were included in a derivation cohort. During the 3-year follow-up, tuberculosis occurred in contacts of index patients in 430 (13\%, 95\% CI 12-14) households. Index patient predictors were pulmonary tuberculosis and sputum smear grade, age, and the maximum number of hours any contact had spent with the index patient while they had any cough. Household predictors were drug use, schooling of the female head of a household, and lower food spending. Contact predictors were if any of the contacts were children, number of lower-weight (body-mass index [BMI] {\textless}20·0 kg/m2) adult contacts, number of normal-weight (BMI 20·0-24·9 kg/m2) adult contacts, and number of past or present household members who previously had tuberculosis. In this derivation cohort, the score c statistic was 0·77 and the risk of household tuberculosis in the highest scoring quintile was 31\% (95\% CI 25-38; 65 of 211) versus 2\% (95\% CI 0-4; four of 231) in the lowest scoring quintile. We externally validated the risk score in a cohort of 4248 contacts from 924 households in Callao recruited between April 23, 2014, and Dec 31, 2015. During follow-up, tuberculosis occurred in contacts of index patients in 120 (13\%, 95\% CI 11-15) households. The score c statistic in this cohort was 0·75 and the risk of household tuberculosis in the highest scoring quintile was 28\% (95\% CI 21-36; 43 of 154) versus 1\% (95\% CI 0-5; two of 148) in the lowest scoring quintile. The highest-scoring third of households captured around 70\% of all tuberculosis among contacts. A simplified risk score including only five variables performed similarly, with only a small reduction in performance.
+                 FINDINGS: Between Dec 12, 2007, and Dec 31, 2015, 16,505 contacts from 3,301 households in Ventanilla were included in a derivation cohort. During the 3-year follow-up, tuberculosis occurred in contacts of index patients in 430 (13\%, 95\% CI 12-14) households. Index patient predictors were pulmonary tuberculosis and sputum smear grade, age, and the maximum number of hours any contact had spent with the index patient while they had any cough. Household predictors were drug use, schooling of the female head of a household, and lower food spending. Contact predictors were if any of the contacts were children, number of lower-weight (body-mass index [BMI] {\textless}20·0 kg/m2) adult contacts, number of normal-weight (BMI 20·0-24·9 kg/m2) adult contacts, and number of past or present household members who previously had tuberculosis. In this derivation cohort, the score c statistic was 0·77 and the risk of household tuberculosis in the highest scoring quintile was 31\% (95\% CI 25-38; 65 of 211) versus 2\% (95\% CI 0-4; four of 231) in the lowest scoring quintile. We externally validated the risk score in a cohort of 4248 contacts from 924 households in Callao recruited between April 23, 2014, and Dec 31, 2015. During follow-up, tuberculosis occurred in contacts of index patients in 120 (13\%, 95\% CI 11-15) households. The score c statistic in this cohort was 0·75 and the risk of household tuberculosis in the highest scoring quintile was 28\% (95\% CI 21-36; 43 of 154) versus 1\% (95\% CI 0-5; two of 148) in the lowest scoring quintile. The highest-scoring third of households captured around 70\% of all tuberculosis among contacts. A simplified risk score including only five variables performed similarly, with only a small reduction in performance.
                  INTERPRETATION: This externally validated score will enable comprehensive biosocial, household-level interventions to be targeted to tuberculosis-affected households that are most likely to benefit.
                  FUNDING: Wellcome Trust, Medical Research Council, Department of Health and Social Care, Department for International Development, Joint Global Health Trials consortium, Bill \& Melinda Gates Foundation, Innovation for Health and Development.},
   language    = {eng},
@@ -161,28 +190,6 @@
   pmid        = {29567728},
   keywords    = {Humans, Income, Tuberculosis, Pulmonary, Latent Tuberculosis, Primary Health Care, Tuberculosis},
   pages       = {1800315}
-}
-
-@article{thompson_predicting_2025,
-  bibtex_show = {true},
-  title       = {Predicting {OCT} retinal ganglion cell volume from pattern {ERGs} and {VEPs} in children with suspected optic neuropathy in a tertiary referral setting},
-  volume      = {10},
-  issn        = {2397-3269},
-  doi         = {10.1136/bmjophth-2024-001899},
-  abstract    = {PURPOSE: To determine the relationship between retinal ganglion cell (RGC) structure, measured by optical coherence tomography (OCT), and function measured by electrodiagnostic tests in children with suspected optic neuropathy.
-                 METHODS: Children presenting consecutively with suspected optic neuropathy were investigated by visual electrophysiology. ISCEV Standard monocular pattern reversal visual evoked potential (PVEP) P100 and pattern electroretinogram (PERG) P50 and N95, amplitudes and peak times were collected, along with the N95 slope 30 ms after the P50 peak. OCT retinal nerve fibre layer (RNFL) thickness from each peripapillary sector and the average macular RGC volume in a 3.45 mm diameter circle were collated. The sensitivity (SENS) and specificity (SPEC) of abnormal visual electrophysiology measures in predicting OCT structural measures were estimated by receiver operating characteristic (ROC) area under the ROC curve (AUC).
-                 RESULTS: Monocular PVEPs and PERGs from 30-degree stimulus fields and OCT RNFL and RGC volume were available from 42 children (84 eyes) aged 5.5-16.3 years (median 12.4 years). PVEP AUC was highest for predicting both RGC macular volume and temporal RNFL thinning (SENS 88\%, SPEC 88\%), followed by the PERG N95 slope (SENS 79\%, SPEC 78\%). PERG N95:P50 had the lowest SENS of 62\% and SPEC of 61\%, which were similar for all RNFL sectors.
-                 CONCLUSION: Abnormal PERG N95 slopes and PVEPs predicted severe loss of macular RGC volume and temporal sector RNFL with high diagnostic accuracy. These measures are important additions to the less specific PERG N95:P50, which was broadly sensitive to all RNFL sectors. The N95 slope and PVEPs are valuable objective functional markers of RGC health in children.},
-  language    = {eng},
-  number      = {1},
-  journal     = {BMJ open ophthalmology},
-  author      = {Thompson, Dorothy A. and Prise, Katrina L. and Tucker, Lisa and Roche, Dermot and Bowman, Richard and Evans, Benjamin E. W. and Handley, Sian and Marmoy, Oliver R.},
-  month       = mar,
-  year        = {2025},
-  pmid        = {40122570},
-  pmcid       = {PMC11931969},
-  keywords    = {Child, Child, Preschool, Humans, Adolescent, Female, Male, ROC Curve, Electrophysiology, Electroretinography, Evoked Potentials, Visual, Imaging, Nerve Fibers, Optic Nerve, Optic Nerve Diseases, Retinal Ganglion Cells, Tertiary Care Centers, Tomography, Optical Coherence},
-  pages       = {e001899}
 }
 
 
